--- a/app/src/main/res/layout/activity_menu_page.xml
+++ b/app/src/main/res/layout/activity_menu_page.xml
@@ -205,7 +205,7 @@
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="13dp"
             android:background="@color/black"
-            android:onClick="musicplayer"
+            android:onClick="cbr"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/chatbot" />
 
